* Added createFlowDefinitionRegistry hook method to AbstractFlowDefinitionRegistryFactoryBean.

Package org.springframework.webflow.engine.builder
* Removed END_STATE_VIEW_FLAG_PARAMETER from TextToViewSelector. As a result, the endingViewSelector
  method of AbstractFlowBuilder was also removed.
* Removed newDefaultFlowServiceLocator method from AbstractFlowBuildingFlowRegistryFactoryBean. 

Package org.springframework.webflow.engine.support
* Renamed DefaultFlowAttributeMapper to ConfigurableFlowAttributeMapper for clarity and to avoid confusion.

Changes in version 1.0 RC4 (04.10.2006)
---------------------------------------

General
* Restructured codebase into distinct layers and subsystems upon in-depth SonarJ analysis of architecture.
  Notable restructuring:
  - Extracted stable "Flow Definition" API to webflow.definition package from root webflow package
  - Extracted stable "Flow Definition Registry" subsystem to webflow.definition.registry.
  - Extracted stable "Flow Execution" API to webflow.execution package from root webflow package.
  - Extracted stable "External Context" subsystem to webflow.context from root webflow package.
  - Extracted "Flow Execution Engine" implementation to webflow.engine package from root webflow package,
    decoupling stable Flow Definition, Flow Definition Registry, Flow Execution, Flow Execution Repository,
    and Flow Executor subsystems from the more volatile engine implementation.
  - Moved webflow.builder subsystem into the webflow.engine implementation package.
  - Extracted the XML-based Flow Builder into webflow.builder.xml sub package.
  - Extracted generic data structures into webflow.core.collection from root webflow package.
  - Extracted generic "Conversation Manager" subsystem into webflow.conversation from execution.repository.
  - Factored out test support code into "engine" and "execution" subpackages, for unit testing 
    flow artifacts and system testing flow executions respectively.